Fixed spacing between two open FAQs.

--- a/src/styles/FAQs/FAQs.scss
+++ b/src/styles/FAQs/FAQs.scss
@@ -49,6 +49,9 @@
         + .FAQs-List-Item {
           border: 0;
         }
+        + .Open {
+          margin-top: 30px;
+        }
         h3 {
           background-color: $tango;
           color: $white;
